<resources>
    <string name="app_name">Healthtech</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="error_sign_in_failed">Sign in failed</string>
    <string name="error_sign_up_failed">Sign up failed</string>
    <string name="warning_field_required">Email required</string>
    <string name="warning_password_field_required">Password required</string>
    <string name="sign_in_loading_dialog">Loading...</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="book_appointment">Book an appointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
