<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="60dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">


                    <EditText
                        android:id="@+id/emailFieldView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:hint="@string/sign_in_email_hint"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--app:srcCompat="@drawable/ic_lock_outline_24dp" />-->

                    <EditText
                        android:id="@+id/passwordFieldView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:hint="@string/sign_in_password_hint"
                        android:inputType="textPassword" />

                </LinearLayout>

                <Button
                    android:id="@+id/signInBtnView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:paddingEnd="32dp"
                    android:paddingStart="32dp"
                    android:text="@string/sign_in_btn_text"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                android:id="@+id/signUpBtnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/sign_up_btn_text"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:visibility="visible"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:fitsSystemWindows="true"
            android:focusableInTouchMode="true"
            android:visibility="visible"
            tools:context=".signin.SignInActivity">

            <!--<com.facebook.drawee.view.SimpleDraweeView-->
            <!--android:id="@+id/bg_left"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_toStartOf="@+id/bg_right"-->
            <!--app:placeholderImage="@drawable/bg_login_1920"-->
            <!--app:placeholderImageScaleType="centerCrop" />-->

            <!--<View-->
                <!--android:id="@+id/bg_right"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:background="@color/colorPrimary" />-->


        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/stripe"
            android:adjustViewBounds="true"/>

<!--        <TextView
            android:id="@+id/labelDemoBD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/switchDB"
            android:layout_alignBottom="@+id/switchDB"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="Demo"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/switchDB"
            app:layout_constraintEnd_toStartOf="@+id/switchDB"
            app:layout_constraintTop_toTopOf="@+id/switchDB" />

        <TextView
            android:id="@+id/labelRealDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="96dp"
            android:layout_marginTop="8dp"
            android:text="Test"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/switchDB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switchDB" />

        <Switch
            android:id="@+id/switchDB"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_menu"
            app:layout_constraintEnd_toStartOf="@+id/labelRealDB" />

        <TextView
            android:id="@+id/chooseDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="0dp"
            android:text="Choose database:"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switchDB"
            app:layout_constraintStart_toStartOf="@+id/labelDemoBD" />-->

    </android.support.constraint.ConstraintLayout>
</layout>